removed access from tabapps config, added new ACL lvl instead

--- a/source/package/components/com_xiveirm/administrator/models/forms/tabapp.xml
+++ b/source/package/components/com_xiveirm/administrator/models/forms/tabapp.xml
@@ -12,11 +12,6 @@
 			description="COM_XIVEIRM_FORM_DESC_TABAPP_USERGROUP"
 			filter="safehtml" />
 
-		<field name="access" type="accesslevel" size="40" class="inputbox"
-			label="COM_XIVEIRM_FORM_LBL_TABAPP_ACCESS"
-			description="COM_XIVEIRM_FORM_DESC_TABAPP_ACCESS"
-			filter="raw" />
-
 		<field name="plugin" type="sql" class="inputbox"
 			label="COM_XIVEIRM_FORM_LBL_TABAPP_PLUGIN"
 			description="COM_XIVEIRM_FORM_DESC_TABAPP_PLUGIN"
@@ -28,7 +23,7 @@
 			description="COM_XIVEIRM_FORM_DESC_TABAPP_CATEGORY"
 			extension="com_xiveirm.contacts"
 			filter="raw">
-				<option value="0">JOPTION_SELECT_CATEGORY</option>
+				<option value="0">COM_XIVEIRM_FORM_OPTION_TABAPP_CATEGORY</option>
 		</field>
 
 		<field name="filter_catid" type="category"
