--- a/source/components/com_xiveirm/administrator/models/forms/contact.xml
+++ b/source/components/com_xiveirm/administrator/models/forms/contact.xml
@@ -38,7 +38,7 @@
 		<field name="catid" type="category"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_CATEGORY"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_CATEGORY"
-			extension="com_xiveirm.contacts"
+			extension="com_xiveirm"
 			filter="raw">
 				<option value="0">JOPTION_SELECT_CATEGORY</option>
 		</field>
@@ -46,7 +46,7 @@
 		<field name="filter_catid" type="category"
 			label="COM_XIVEIRM_FORM_LBL_CONTACT_CATID"
 			description="COM_XIVEIRM_FORM_DESC_CONTACT_CATID"
-			extension="com_xiveirm.contacts"
+			extension="com_xiveirm"
 			show_root="1"
 			onchange="this.form.submit();" />
 
