chagned tabapp to plugin

--- a/source/components/com_xiveirm/administrator/models/forms/tabapp.xml
+++ b/source/components/com_xiveirm/administrator/models/forms/tabapp.xml
@@ -61,6 +61,6 @@
 			filter="rules"
 			validate="rules"
 			component="com_xiveirm"
-			section="tabapp" />
+			section="plugin" />
 	</fieldset>
 </form>
