--- a/source/components/com_xiveirm/administrator/models/forms/plugin.xml
+++ b/source/components/com_xiveirm/administrator/models/forms/plugin.xml
@@ -2,45 +2,50 @@
 <form>
 	<fieldset>
 		<field name="id" type="text" class="readonly"
-			label="COM_XIVEIRM_FORM_LBL_TABAPP_ID"
+			label="COM_XIVEIRM_FORM_LBL_PLUGIN_ID"
 			description="JGLOBAL_FIELD_ID_DESC"
 			default="0"
 			readonly="true" />
 
-		<field name="client_id" type="usergroup" size="40" class="inputbox"
-			label="COM_XIVEIRM_FORM_LBL_TABAPP_USERGROUP"
-			description="COM_XIVEIRM_FORM_DESC_TABAPP_USERGROUP"
-			filter="safehtml" />
+		<field name="client_id" type="usergroup"
+			label="COM_XIVEIRM_FORM_LBL_PLUGIN_CLIENT_ID"
+			description="COM_XIVEIRM_FORM_DESC_PLUGIN_CLIENT_ID"
+			required="true"
+			filter="raw" />
 
-		<field name="plugin" type="sql" class="inputbox"
-			label="COM_XIVEIRM_FORM_LBL_TABAPP_PLUGIN"
-			description="COM_XIVEIRM_FORM_DESC_TABAPP_PLUGIN"
+		<field name="filter_client_id" type="usergroup" onchange="this.form.submit();" />
+
+		<field name="plugin" type="sql"
+			label="COM_XIVEIRM_FORM_LBL_PLUGIN_PLUGIN"
+			description="COM_XIVEIRM_FORM_DESC_PLUGIN_PLUGIN"
+			required="true"
+			filter="raw"
 			query="SELECT element, name FROM #__extensions WHERE folder = 'irmapp'"
 			key_field="element" value_field="name" />
 
-		<field name="folder" type="text" class="inputbox disabled" disabled="disabled"
-			label="Plugin Folder"
-			description="COM_XIVEIRM_FORM_DESC_TABAPP_PLUGIN" />
+		<field name="filter_plugin" type="sql" onchange="this.form.submit();"
+			query="SELECT element, name FROM #__extensions WHERE folder = 'irmapp'"
+			key_field="element" value_field="name" />
 
 		<field name="catid" type="category"
-			label="COM_XIVEIRM_FORM_LBL_TABAPP_CATEGORY"
-			description="COM_XIVEIRM_FORM_DESC_TABAPP_CATEGORY"
+			label="COM_XIVEIRM_FORM_LBL_PLUGIN_CATID"
+			description="COM_XIVEIRM_FORM_DESC_PLUGIN_CATID"
+			required="true"
 			extension="com_xiveirm"
 			filter="raw">
-				<option value="0">COM_XIVEIRM_FORM_OPTION_TABAPP_CATEGORY</option>
+				<option value="0">COM_XIVEIRM_FORM_OPTION_PLUGIN_CATEGORY</option>
 		</field>
 
 		<field name="filter_catid" type="category"
-			label="COM_XIVEIRM_FORM_LBL_TABAPP_CATEGORY"
-			description="COM_XIVEIRM_FORM_DESC_TABAPP_CATEGORY"
+			label="COM_XIVEIRM_FORM_LBL_PLUGIN_CATID"
+			description="COM_XIVEIRM_FORM_DESC_PLUGIN_CATID"
 			extension="com_xiveirm"
 			show_root="1"
 			onchange="this.form.submit();" />
 
 		<field name="config" type="editor" class="inputbox"
-			label="COM_XIVEIRM_FORM_LBL_TABAPP_CONFIG"
-			description="COM_XIVEIRM_FORM_DESC_TABAPP_CONFIG"
-			editor="codemirror"
+			label="COM_XIVEIRM_FORM_LBL_PLUGIN_CONFIG"
+			description="COM_XIVEIRM_FORM_DESC_PLUGIN_CONFIG"
 			filter="safehtml" />
 
 		<field name="state" type="list" size="1" class="inputbox"
@@ -49,8 +54,8 @@
 			default="1">
 				<option value="1">JPUBLISHED</option>
 				<option value="0">JUNPUBLISHED</option>
-		</field>
-	</fieldset> 
+		</field> 
+	</fieldset>
 	<fieldset name="accesscontrol">
 		<field name="asset_id" type="hidden"
 			filter="unset" />
