added vehicles and order management

--- a/source/components/com_xivetranscorder/administrator/assets/css/xivetranscorder.css
+++ b/source/components/com_xivetranscorder/administrator/assets/css/xivetranscorder.css
@@ -7,3 +7,12 @@
       background-image: url(../images/l_transcorders.png);
       padding-left:60px!important;
 }
+.icon-48-vehicles {
+      background-image: url(../images/l_vehicles.png);
+      padding-left:60px!important;
+}
+
+.icon-48-vehicle {
+      background-image: url(../images/l_vehicles.png);
+      padding-left:60px!important;
+}
